--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
         <li>¯\_(ツ)_/¯</li>
         <li>( ͡° ͜ʖ ͡°)</li>
         <li>ಥ_ಥ</li>
+        <li>ヽ༼ ಠ益ಠ ༽ﾉ</li>
     </ul>
     <script src="popup.js"></script>
 </body>
