--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,7 @@
         <li>( ͡° ͜ʖ ͡°)</li>
         <li>ಥ_ಥ</li>
         <li>ヽ༼ ಠ益ಠ ༽ﾉ</li>
+        <li>щ(ಥДಥщ)</li>
     </ul>
     <script src="popup.js"></script>
 </body>
