--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,7 @@
         <li>ಥ_ಥ</li>
         <li>ヽ༼ ಠ益ಠ ༽ﾉ</li>
         <li>щ(ಥДಥщ)</li>
+        <li>ლ(ಠ益ಠ)ლ</li>
     </ul>
     <script src="popup.js"></script>
 </body>
