--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,11 @@
     <ul>
         <li>ಠ_ಠ</li>
         <li>(╯°□°）╯︵ ┻━┻</li>
+        <li>┻━┻︵ \(°□°)/ ︵ ┻━┻</li>
         <li>┐(´-｀)┌</li>
         <li>┐(´∀｀)┌</li>
         <li>┐(´∇｀)┌</li>
+        <li>d=(´▽｀)=b</li>
         <li>┐(´д｀)┌</li>
         <li>┐(‘～`;)┌</li>
         <li>┐(‘д’)┌</li>
@@ -19,10 +21,14 @@
         <li>ヘ(´－｀;)ヘ</li>
         <li>¯\_(ツ)_/¯</li>
         <li>( ͡° ͜ʖ ͡°)</li>
+        <li>༼ຈل͜ຈ༽</li>
         <li>ಥ_ಥ</li>
         <li>ヽ༼ ಠ益ಠ ༽ﾉ</li>
         <li>щ(ಥДಥщ)</li>
         <li>ლ(ಠ益ಠ)ლ</li>
+        <li>╭∩╮（︶︿︶）╭∩╮</li>
+        <li>☜(ﾟヮﾟ☜)</li>
+        <li>Ỏ̷͖͈̞̩͎̻̫̫̜͉̠̫͕̭̭̫̫̹̗̹͈̼̠̖͍͚̥͈̮̼͕̠̤̯̻̥̬̗̼̳̤̳̬̪̹͚̞̼̠͕̼̠̦͚̫͔̯̹͉͉̘͎͕̼̣̝͙̱̟̹̩̟̳̦̭͉̮̖̭̣̣̞̙̗̜̺̭̻̥͚͙̝̦̲̱͉͖͉̰̦͎̫̣̼͎͍̠̮͓̹̹͉̤̰̗̙͕͇͔̱͕̭͈̳̗̭͔̘̖̺̮̜̠͖̘͓̳͕̟̠̱̫̤͓͔̘̰̲͙͍͇̙͎̣̼̗̖͙̯͉̠̟͈͍͕̪͓̝̩̦̖̹̼̠̘̮͚̟͉̺̜͍͓̯̳̱̻͕̣̳͉̻̭̭̱͍̪̩̭̺͕̺̼̥̪͖̦̟͎̻̰_Ỏ̷͖͈̞̩͎̻̫̫̜͉̠̫͕̭̭̫̫̹̗̹͈̼̠̖͍͚̥͈̮̼͕̠̤̯̻̥̬̗̼̳̤̳̬̪̹͚̞̼̠͕̼̠̦͚̫͔̯̹͉͉̘͎͕̼̣̝͙̱̟̹̩̟̳̦̭͉̮̖̭̣̣̞̙̗̜̺̭̻̥͚͙̝̦̲̱͉͖͉̰̦͎̫̣̼͎͍̠̮͓̹̹͉̤̰̗̙͕͇͔̱͕̭͈̳̗̭͔̘̖̺̮̜̠͖̘͓̳͕̟̠̱̫̤͓͔̘̰̲͙͍͇̙͎̣̼̗̖͙̯͉̠̟͈͍͕̪͓̝̩̦̖̹̼̠̘̮͚̟͉̺̜͍͓̯̳̱̻͕̣̳͉̻̭̭̱͍̪̩̭̺͕̺̼̥̪͖̦̟͎̻̰</li>
     </ul>
     <script src="popup.js"></script>
 </body>
