--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,12 @@
     <ul>
         <li>ಠ_ಠ</li>
         <li>(╯°□°）╯︵ ┻━┻</li>
+        <li>┬──┬◡ﾉ(° -°ﾉ)</li>
         <li>┐(´-｀)┌</li>
         <li>┐(´∀｀)┌</li>
         <li>┐(´∇｀)┌</li>
+        <li>d=(´▽｀)=b</li>
+        <li>(σ ՞ਊ ՞)σ</li>
         <li>┐(´д｀)┌</li>
         <li>┐(‘～`;)┌</li>
         <li>┐(‘д’)┌</li>
@@ -18,12 +21,17 @@
         <li>┐(~ー~;)┌</li>
         <li>ヘ(´－｀;)ヘ</li>
         <li>¯\_(ツ)_/¯</li>
+        <li>ʅ（´◔౪◔）ʃ</li>
+        <li>ヽ(́◕◞౪◟◕‵)ﾉ</li>
+        <li>(❍ᴥ❍ʋ)</li>
         <li>( ͡° ͜ʖ ͡°)</li>
         <li>ಥ_ಥ</li>
         <li>ヽ༼ ಠ益ಠ ༽ﾉ</li>
         <li>щ(ಥДಥщ)</li>
         <li>ლ(ಠ益ಠ)ლ</li>
         <li>༼ つ ◕_◕ ༽つ</li>
+        <li>*ଘ(੭*ˊᵕˋ)੭* ੈ✩‧₊˚</li>
+        <li>✧*｡٩(ˊᗜˋ*)و✧*｡</li>
     </ul>
     <script src="popup.js"></script>
 </body>
