--- a/popup.html
+++ b/popup.html
@@ -41,6 +41,17 @@
         <li>(✿◠‿◠)</li>
         <li>(─‿‿─)</li>
         <li>(¬､¬)</li>
+        <li>●_●</li>
+        <li>◉_◉</li>
+        <li>⊙▃⊙</li>
+        <li>｡◕‿‿◕｡</li>
+        <li>⊙﹏⊙</li>
+        <li>(/◔ ◡ ◔)/</li>
+        <li>ತಎತ</li>
+        <li>ಠ╭╮ಠ</li>
+        <li>(• ε •)</li>
+        <li>ᕙ(⇀‸↼‶)ᕗ</li>
+        <li>(づ｡◕‿‿◕｡)づ</li>
     </ul>
     <script src="popup.js"></script>
 </body>
